# agent-tools

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.test  Makefile.toml  README.md  TIPS.md  config.yaml  deny.toml  docker-compose.test.yaml  release-please-config.json  release-plz.toml  settings.json
.claude/: settings.json
.github/: dependabot.yml
.serena/: project.yml
crates/agent-tools/: Cargo.toml  README.md
crates/agent-tools/src/: commands.rs  config.rs  fs_utils.rs  main.rs  paths.rs  project.rs
crates/agent-tools/src/commands/: build.rs  current.rs  init.rs  profile.rs  rebase.rs  runpod.rs  skill.rs  start.rs  startup.rs  status.rs  sync.rs  unlink.rs  update.rs  vcs.rs
crates/agent-tools/src/commands/skill/: diff.rs  list.rs  new.rs  update.rs  validate.rs
crates/agent-tools/tests/: integration_tests.rs
crates/agent-tools/tests/integration/: basic.rs  build.rs  cleanup.rs  common.rs  link_unlink.rs  profile.rs  skill_diff.rs  skill_install.rs  skill_installed.rs  skill_list.rs  skill_new.rs  skill_remove.rs  skill_update.rs  skill_validate.rs  status.rs  sync.rs  update.rs
crates/skill-test/: Cargo.toml
crates/skill-test/src/: main.rs
crates/skill-test/tests/: cli_tests.rs
crates/skill-test/tests/cli_tests/: args.rs  assertions.rs  failures.rs  features.rs  testfile_format.rs
crates/skill-test/tests/fixtures/cases/: simple.yaml
crates/skill-test/tests/fixtures/comprehensive-skill/: SKILL.md
crates/skill-test/tests/fixtures/config-skill/: skill-test.config.yaml
crates/skill-test/tests/fixtures/contains-skill/: SKILL.md
crates/skill-test/tests/fixtures/contains-skill/skill-tests/: test-contains.yaml
crates/skill-test/tests/fixtures/error-duplicate-id-skill/skill-tests/: test-duplicate-id.yaml
crates/skill-test/tests/fixtures/error-empty-prompt-skill/: SKILL.md
crates/skill-test/tests/fixtures/error-empty-prompt-skill/skill-tests/: test-empty-prompt.yaml
crates/skill-test/tests/fixtures/error-undefined-ref-skill/: SKILL.md
crates/skill-test/tests/fixtures/exec-python-skill/skill-tests/: test-exec-python.yaml
crates/skill-test/tests/fixtures/exec-skill/: SKILL.md
crates/skill-test/tests/fixtures/exec-skill/skill-tests/: test-exec.yaml
crates/skill-test/tests/fixtures/exec-timeout-skill/: SKILL.md
crates/skill-test/tests/fixtures/failure-skill/: SKILL.md
crates/skill-test/tests/fixtures/failure-skill/skill-tests/: test-failure.yaml
crates/skill-test/tests/fixtures/line-count-skill/skill-tests/: test-line-count.yaml
crates/skill-test/tests/fixtures/multi-skill-b/: SKILL.md
crates/skill-test/tests/fixtures/node-modules-skill/skill-tests/: test-main.yaml
crates/skill-test/tests/fixtures/regex-skill/skill-tests/: test-regex.yaml
crates/skill-test/tests/fixtures/simple-skill/skill-tests/: test-simple.yaml
crates/skill-test/tests/fixtures/spec-yaml-skill/: SKILL.md
crates/skill-test/tests/fixtures/testfile-format-skill/: SKILL.md
crates/skill-test/tests/fixtures/testfile-format-skill/skill-tests/: test-testfile-format.yaml
crates/skill-test/tests/fixtures/tool-called-skill/: SKILL.md
crates/skill-test/tests/fixtures/tool-called-skill/skill-tests/: test-tool-called.yaml
crates/skill-test/tests/fixtures/validation-skill/skill-tests/: test-validation.yaml
skill-test/crates/skill-test-core/: Cargo.toml
skill-test/crates/skill-test-core/src/: assertion.rs  contract.rs  lib.rs  loader.rs  report.rs  types.rs
(+164 files in other folders)
