[workspace]
resolver = "2"
members = [
    "crates/agent-tools",
    "crates/skill-test",
    "crates/skill-test-core",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"  # jsonschema dependencies have multiple versions
cargo_common_metadata = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.dependencies]
skill-test-core = { path = "crates/skill-test-core", version = "0.1.0" }
