[package]
name = "skill-test"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "CLI tool for testing Claude Code skills"

[[bin]]
name = "skill-test"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
skill-test-core = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
comfy-table = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "macros"] }

[features]
default = []
integration-test = []  # Enable integration tests (requires Claude CLI)

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
which = "8"
serde_json = "1"

[lints]
workspace = true
